@@ -27,8 +27,7 @@ import alfio.repository.user.UserRepository;
 import alfio.repository.user.join.UserOrganizationRepository;
 import alfio.util.Json;
 import com.auth0.jwt.interfaces.Claim;
-import lombok.SneakyThrows;
-import lombok.extern.log4j.Log4j2;
+import org.apache.commons.lang3.concurrent.ConcurrentException;
 import org.apache.commons.lang3.concurrent.LazyInitializer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -39,12 +38,11 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import java.net.http.HttpClient;
 import java.util.*;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
-@Log4j2
 public class AdminOpenIdAuthenticationManager extends BaseOpenIdAuthenticationManager {
 
-    private final Logger logger = LoggerFactory.getLogger(AdminOpenIdAuthenticationManager.class);
+    private static final Logger log = LoggerFactory.getLogger(AdminOpenIdAuthenticationManager.class);
+
     private static final String ALFIO_ADMIN = "ALFIO_ADMIN";
 
     private final LazyConfigurationContainer configurationContainer;
@@ -74,9 +72,9 @@ public class AdminOpenIdAuthenticationManager extends BaseOpenIdAuthenticationMa
 
     @Override
     protected OpenIdAlfioUser fromToken(String idToken, String subject, String email, Map<String, Claim> idTokenClaims) {
-        List<String> groupsList = idTokenClaims.get(openIdConfiguration().getRolesParameter()).asList(String.class);
+        List<String> groupsList = idTokenClaims.get(openIdConfiguration().rolesParameter()).asList(String.class);
         log.trace("IdToken contains the following groups: {}", groupsList);
-        List<String> groups = groupsList.stream().filter(group -> group.startsWith("ALFIO_")).collect(Collectors.toList());
+        List<String> groups = groupsList.stream().filter(group -> group.startsWith("ALFIO_")).toList();
         boolean isAdmin = groups.contains(ALFIO_ADMIN);
 
         if (isAdmin) {
@@ -88,21 +86,25 @@ public class AdminOpenIdAuthenticationManager extends BaseOpenIdAuthenticationMa
 
         if(groups.isEmpty()){
             String message = "Users must have at least a group called ALFIO_ADMIN or ALFIO_BACKOFFICE";
-            logger.error(message);
+            log.error(message);
             throw new RuntimeException(message);
         }
 
-        List<String> alfioOrganizationAuthorizationsRaw = idTokenClaims.get(openIdConfiguration().getAlfioGroupsParameter()).asList(String.class);
+        List<String> alfioOrganizationAuthorizationsRaw = idTokenClaims.get(openIdConfiguration().alfioGroupsParameter()).asList(String.class);
         log.trace("IdToken contains the following alfioGroups: {}", alfioOrganizationAuthorizationsRaw);
         Map<String, Set<String>> alfioOrganizationAuthorizations = extractOrganizationRoles(alfioOrganizationAuthorizationsRaw);
         Set<Role> alfioRoles = extractAlfioRoles(alfioOrganizationAuthorizations);
         return new OpenIdAlfioUser(idToken, subject, email, getUserType(), alfioRoles, alfioOrganizationAuthorizations);
     }
 
-    @SneakyThrows
+
     @Override
     protected OpenIdConfiguration openIdConfiguration() {
-        return configurationContainer.get();
+        try {
+            return configurationContainer.get();
+        } catch (ConcurrentException e) {
+            throw new IllegalStateException(e);
+        }
     }
 
     private Set<Role> extractAlfioRoles(Map<String, Set<String>> alfioOrganizationAuthorizations) {
@@ -122,10 +124,10 @@ public class AdminOpenIdAuthenticationManager extends BaseOpenIdAuthenticationMa
             "openid",
             "email",
             "profile",
-            openIdConfiguration.getRolesParameter(),
-            openIdConfiguration.getAlfioGroupsParameter(),
-            openIdConfiguration.getGivenNameClaim(),
-            openIdConfiguration.getFamilyNameClaim()
+            openIdConfiguration.rolesParameter(),
+            openIdConfiguration.alfioGroupsParameter(),
+            openIdConfiguration.givenNameClaim(),
+            openIdConfiguration.familyNameClaim()
         );
     }
 
@@ -178,6 +180,5 @@ public class AdminOpenIdAuthenticationManager extends BaseOpenIdAuthenticationMa
             return OpenIdConfiguration.from(environment, configurationManager);
         }
     }
-
 }
 
