@@ -20,34 +20,34 @@ import alfio.controller.support.CustomBindingResult;
 import alfio.model.result.Result;
 import alfio.model.result.ValidationResult;
 import alfio.model.result.WarningMessage;
-import lombok.AllArgsConstructor;
-import lombok.Getter;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.FieldError;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-@AllArgsConstructor
 public class ValidatedResponse<T> {
     private final ValidationResult validationResult;
     private final T value;
+
+    public ValidatedResponse(ValidationResult validationResult, T value) {
+        this.validationResult = validationResult;
+        this.value = value;
+    }
 
 
     public static <T> ValidatedResponse<T> toResponse(BindingResult bindingResult, T value) {
 
         var transformed = bindingResult.getAllErrors().stream().map(objectError -> {
-            if (objectError instanceof FieldError) {
-                var fe = (FieldError) objectError;
+            if (objectError instanceof FieldError fe) {
                 return new ValidationResult.ErrorDescriptor(fe.getField(), "", fe.getCode(), fe.getArguments());
             } else {
                 return new ValidationResult.ErrorDescriptor(objectError.getObjectName(), "", objectError.getCode(), objectError.getArguments());
             }
-        }).collect(Collectors.toList());
+        }).toList();
 
-        List<WarningMessage> warnings = bindingResult instanceof CustomBindingResult ? ((CustomBindingResult)bindingResult).getWarnings() : List.of();
+        List<WarningMessage> warnings = bindingResult instanceof CustomBindingResult cbd ? cbd.getWarnings() : List.of();
         return new ValidatedResponse<>(ValidationResult.failed(transformed, warnings), value);
     }
 
@@ -57,7 +57,7 @@ public class ValidatedResponse<T> {
         }
         var transformed = result.getErrors().stream()
             .map(ec -> new ValidationResult.ErrorDescriptor(objectName, "", ec.getCode()))
-            .collect(Collectors.toList());
+            .toList();
 
         return new ValidatedResponse<>(ValidationResult.failed(transformed), null);
     }
@@ -73,7 +73,7 @@ public class ValidatedResponse<T> {
     public List<ErrorDescriptor> getValidationErrors() {
         return validationResult.getValidationErrors().stream()
             .map(ed -> new ErrorDescriptor(ed.getFieldName(), ed.getCode(), fromArray(ed.getArguments())))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public int getErrorCount() {
@@ -101,11 +101,28 @@ public class ValidatedResponse<T> {
         }
     }
 
-    @AllArgsConstructor
-    @Getter
+
     public static class ErrorDescriptor {
         private final String fieldName;
         private final String code;
         private final Map<String, Object> arguments;
+
+        public String getFieldName() {
+            return fieldName;
+        }
+
+        public String getCode() {
+            return code;
+        }
+
+        public Map<String, Object> getArguments() {
+            return arguments;
+        }
+
+        public ErrorDescriptor(String fieldName, String code, Map<String, Object> arguments) {
+            this.fieldName = fieldName;
+            this.code = code;
+            this.arguments = arguments;
+        }
     }
 }
